Mon Sep  3 06:45:59 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libusb.c: Remove unused variable and structure.

Sun Sep  2 18:39:39 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups.[ch]:
   - Add 'possibly_supported' helper function that can be called
     from subdrivers with the vendor name and HIDDevice_t data and
     displays an informative message that a device might be
     supported.
     Doing this in one location guarantees consistent behaviour.
 * drivers/<hidsubdrivers>:
   - Implemented above change.

 Added Tripplite 09ae:2007 (OMNI900LCD) to supported devices.

Fri Aug 31 15:48:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/hidparser.c:
   - Fix realloc'ing memory. Resize array to the number of reports
     we have parsed, rather than the size it already had (duh!)
 * drivers/libusb.c:
   - Fix regex_matcher which was broken by r1073.
   - Fix (harmless) memory leaks if a regular expression can't be
     compiled (the driver terminates anyway).

Thu Aug 30 19:31:41 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups.[ch]:
   - Added new setting 'reconnect' that determines behaviour how
     the driver will try to reconnect to the UPS. Documentation
     will be updated as soon as enough developers have given their
     opinion on this.

Thu Aug 30 18:59:15 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/hidparser.c:
   - Instead of using malloc() / automatic variables and clearing
     the contents before use with memset, use calloc right away.
   - Allocate pDesc->item in one chunk and realloc it when we know
     how many reports we have once, instead of realloc'ing it one
     item at a time.
   - Removed redundant copy of ReportDesc (is not modified, so we
     can use that).
 * drivers/belkin-hid.[ch]:
   - BELKIN_HID_VERSION was defined twice.

Thu Aug 30 06:59:50 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/hidparser.c: